[CS-90] Added endpoint for summary of recruitment cycles
